Fri May 26 21:43:52 1995  Theodore Y. Ts'o  (tytso@dcl)

	* util.c: Added new function, des_cblock_print_file(), which is
		referenced by libkrb4.a.  (Even though it's never used,
		some OS's demand that all of the references in a
		shared library have to be resolved.)

Mon May  1 11:29:37 1995  Ezra Peisach  (epeisach@kangaroo.mit.edu)

	* read_passwd.c: (des_read_pw_string): Call to krb5_read_password
		wants a pointer to the length of the buffer.

Fri Apr 28 13:35:25 1995  Theodore Y. Ts'o  <tytso@dcl>

	* read_passwd.c (des_read_pw_string): Add des_read_pw_string,
		since it's used by the V4 login.c code.

Thu Apr 13 15:49:16 1995 Keith Vetter (keithv@fusion.com)

	* *.[ch]: removed unneeded INTERFACE from non-api functions.

Wed Mar 22 11:21:38 1995 Keith Vetter (keithv@fusion.com)

	* read_passwd.c: changed return value to krb5_error_code
        * des.h: same as above
        * unix_time.c: didn't work on the PC. Copied PC time code from 
           krb5\os\ustime.c.

Mon Mar 20 21:14:40 1995  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in, unix_time.c(unix_time_gmt_unixsec): Added function
		needed for des425 to work with the Cygnus krb.a.

Wed Mar 15 13:44:23 1995 Keith Vetter (keithv@fusion.com)

	* des.h: now includes des_int.h for proper prototypes.
	* enc_dec.c: cast the types of the input/output buffers in calling
           the encrypt routine.
	* key_sched.c: removed prototype of a non-existent routine.
	* new_rnd_key.c: removed prototypes in the file and instead include
           header file with the real prototypes.
	* random_key.c: code, as it was, could never have worked. Adding 
           prototypes revealed that it was passing KEY with the wrong level
           of indirection.
        
Tue Mar 7 19:57:28 1995 Keith Vetter (keithv@fusion.com)

	* pcbc_enc.c: added casts on the long->char assignments.
        * str_to_key.c: converted int->long to match types.


Wed Mar  8 17:13:44 1995  Theodore Y. Ts'o  <tytso@dcl>
